--- a/forLease.html
+++ b/forLease.html
@@ -585,7 +585,7 @@
 
 			<div id="soma_three" class="row soma_one">
 				<div class="column sOm_TxtIntro" id="sOm_TxtIntro6">
-					<h1>SOUTH OF MARKET PRIVATE RESIDENCES (FOR LEASE)</h1>
+					<h1>Condo 40F Parksuites, Uptown BGC(FOR LEASE)</h1>
 					<dl style="font-size: 26px; margin-top: 20px; margin-left: 100px">
 						<dt>Rental Rate:</dt>
 						<dd style="padding-left: 40px">
