--- a/SouthOfMarket.html
+++ b/SouthOfMarket.html
@@ -240,7 +240,7 @@
 						microwave oven, and kitchen accessories. Linens and towels are
 						provided.<br />
 						<br />The units are fitted with a balcony with a washing machine
-						with spin dryer. Units come with cable TV and Wi-Fi Internet access.
+						with spin dryer. Units come with Wi-Fi Internet access.
 					</p>
 				</div>
 
@@ -322,7 +322,7 @@
 						microwave oven, and kitchen accessories. Linens and towels are
 						provided.<br />
 						<br />The units are fitted with a balcony with a washing machine
-						with spin dryer. Units come with cable TV and Wi-Fi Internet access.
+						with spin dryer. Units come with Wi-Fi Internet access.
 					</p>
 				</div>
 
@@ -404,7 +404,7 @@
 						microwave oven, and kitchen accessories. Linens and towels are
 						provided.<br />
 						<br />The units are fitted with a balcony with a washing machine
-						with spin dryer. Units come with cable TV and Wi-Fi Internet access.
+						with spin dryer. Units come with Wi-Fi Internet access.
 					</p>
 				</div>
 
@@ -486,7 +486,7 @@
 						microwave oven, and kitchen accessories. Linens and towels are
 						provided.<br />
 						<br />The units are fitted with a balcony with a washing machine
-						with spin dryer. Units come with cable TV and Wi-Fi Internet access.
+						with spin dryer. Units come with Wi-Fi Internet access.
 					</p>
 				</div>
 
@@ -568,7 +568,7 @@
 						microwave oven, and kitchen accessories. Linens and towels are
 						provided.<br />
 						<br />The units are fitted with a balcony with a washing machine
-						with spin dryer. Units come with cable TV and Wi-Fi Internet access.
+						with spin dryer. Units come with Wi-Fi Internet access.
 					</p>
 				</div>
 
@@ -650,7 +650,7 @@
 						microwave oven, and kitchen accessories. Linens and towels are
 						provided.<br />
 						<br />The units are fitted with a balcony with a washing machine
-						with spin dryer. Units come with cable TV and Wi-Fi Internet access.
+						with spin dryer. Units come with Wi-Fi Internet access.
 					</p>
 				</div>
 
