--- a/soma2.html
+++ b/soma2.html
@@ -230,7 +230,7 @@
 						microwave oven, and kitchen accessories. Linens and towels are
 						provided. <br />
 						<br />The units are fitted with a balcony with a washing machine
-						with spin dryer. Units come with cable TV and Wi-Fi Internet access.
+						with spin dryer. Units come with Wi-Fi Internet access.
 					</p>
 				</div>
 
@@ -312,7 +312,7 @@
 						microwave oven, and kitchen accessories. Linens and towels are
 						provided.<br />
 						<br />The units are fitted with a balcony with a washing machine
-						with spin dryer. Units come with cable TV and Wi-Fi Internet access.
+						with spin dryer. Units come with Wi-Fi Internet access.
 					</p>
 				</div>
 
@@ -394,7 +394,7 @@
 						microwave oven, and kitchen accessories. Linens and towels are
 						provided.<br />
 						<br />The units are fitted with a balcony with a washing machine
-						with spin dryer. Units come with cable TV and Wi-Fi Internet access.
+						with spin dryer. Units come with Wi-Fi Internet access.
 					</p>
 				</div>
 
