--- a/forLease.html
+++ b/forLease.html
@@ -138,7 +138,7 @@
 							id="soma_6"
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
-							>Condo 40F
+							>Unit 40F
 						</a>
 						<a
 							class="subBar_a"
