--- a/forLease.html
+++ b/forLease.html
@@ -170,7 +170,7 @@
 								<li>No. of Bathroom: 1</li>
 								<li>Rent Inclusive of condo dues</li>
 								<li>Fully furnished</li>
-								<li>Minimum of one year lease</li>
+								<li>Minimum of 1 year lease</li>
 								<li>Complimentary use of SoMa facilities.</li>
 								<li>Located in 35th Floor</li>
 							</ul>
@@ -280,6 +280,7 @@
 								<li>Fully Furnished</li>
 								<li>Minimum of one year lease</li>
 								<li>Complimentary use of SoMa facilities.</li>
+								<li>Located in 32nd Floor</li>
 							</ul>
 						</dd>
 					</dl>
@@ -392,6 +393,9 @@
 								<li>No. of Bedrooms: 2</li>
 								<li>No.of Bathrooms: 2</li>
 								<li>Fully Furnished</li>
+								<li>Minimum 1 yearlease</li>
+								<li>Rent inclusive of condo dues</li>
+									
 							</ul>
 						</dd>
 					</dl>
@@ -510,7 +514,10 @@
 						<dd>
 							<ul style="padding-left: 40px; margin-top: 20px">
 								<li>Fully-Furnished</li>
-								<li>No. of Bedroom</li>
+								<li>Studio Type</li>
+								<li>Minimum 1 year lease</li>
+								<li>Rent inclusive of Condo dues</li>
+								<li>Located in 34th floor</li>
 							</ul>
 						</dd>
 					</dl>
@@ -604,6 +611,7 @@
 								<li>Fully-Furnished</li>
 								<li>Rent inclusive of condo dues</li>
 								<li>Minimum of 1 year lease</li>
+								
 							</ul>
 						</dd>
 					</dl>
