--- a/forLease.html
+++ b/forLease.html
@@ -393,8 +393,9 @@
 								<li>No. of Bedrooms: 2</li>
 								<li>No.of Bathrooms: 2</li>
 								<li>Fully Furnished</li>
-								<li>Minimum 1 yearlease</li>
+								<li>Minimum 1 year lease</li>
 								<li>Rent inclusive of condo dues</li>
+								<li>Located in 15th floor</li>
 									
 							</ul>
 						</dd>
