--- a/forsale.html
+++ b/forsale.html
@@ -107,7 +107,7 @@
 							id="soma_4"
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
-							>Unit 305N
+							>One-Br/Studio
 						</a>
 						<a
 							class="subBar_a"
