--- a/forsale.html
+++ b/forsale.html
@@ -115,21 +115,21 @@
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
 						>
-							Unit 1507S
-						</a>
-						<a
-							class="subBar_a"
-							id="soma_2"
-							onclick="subBarBtn(this.id)"
-							style="cursor: pointer"
-							>Unit 3705S
+							One-Br/Studio
 						</a>
 						<a
 							class="subBar_a"
 							id="soma_3"
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
-							>Unit 3405N
+							>One-Br/Studio
+						</a>
+						<a
+							class="subBar_a"
+							id="soma_2"
+							onclick="subBarBtn(this.id)"
+							style="cursor: pointer"
+							>Two-Br/Studio
 						</a>
 						<a
 							class="subBar_a"
