--- a/forsale.html
+++ b/forsale.html
@@ -129,14 +129,14 @@
 							id="soma_2"
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
-							>Two-Br/Studio
+							>Two-Br
 						</a>
 						<a
 							class="subBar_a"
 							id="soma_7"
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
-							>FORT VICTORIA (Taguig)
+							>Four-Br
 						</a>
 					</div>
 				</div>
