--- a/forLease.html
+++ b/forLease.html
@@ -109,7 +109,7 @@
 							id="soma_4"
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
-							>Unit 3506N
+							>One-Br/Studio
 						</a>
 						<a
 							class="subBar_a"
@@ -117,35 +117,35 @@
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
 						>
-							Unit 3202
-						</a>
-						<a
-							class="subBar_a"
-							id="soma_2"
-							onclick="subBarBtn(this.id)"
-							style="cursor: pointer"
-							>Unit 1505S
+							One-Br/Studio
 						</a>
 						<a
 							class="subBar_a"
 							id="soma_3"
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
-							>Unit 3405N
+							>Unit 1505S
+						</a>
+						<a
+							class="subBar_a"
+							id="soma_2"
+							onclick="subBarBtn(this.id)"
+							style="cursor: pointer"
+							>Two-Br
 						</a>
 						<a
 							class="subBar_a"
 							id="soma_6"
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
-							>Unit 40F
+							>Two-Br
 						</a>
 						<a
 							class="subBar_a"
 							id="soma_7"
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
-							>FORT VICTORIA (Taguig)
+							>Four-Br
 						</a>
 					</div>
 				</div>
