--- a/forLease.html
+++ b/forLease.html
@@ -101,7 +101,7 @@
 			<div class="sub_topBar">
 				<div class="row row_subTopBar">
 					<div class="column topBar_Section">
-						<h3>Check our available studios:</h3>
+						<h3>Check our available units:</h3>
 					</div>
 					<div class="column topBar_SectionTwo">
 						<a
