--- a/forsale.html
+++ b/forsale.html
@@ -535,7 +535,7 @@
 						<dd style="padding-left: 40px">
 							-
 							<span style="color: blue; font-weight: 700"
-								>PHP 120-140k per month</span
+								>PHP 26 MM (Negotiable)</span
 							>
 						</dd>
 
