--- a/forLease.html
+++ b/forLease.html
@@ -124,7 +124,7 @@
 							id="soma_3"
 							onclick="subBarBtn(this.id)"
 							style="cursor: pointer"
-							>Unit 1505S
+							>One-Br/Studio
 						</a>
 						<a
 							class="subBar_a"
